--- a/breadboard/breadboard.html
+++ b/breadboard/breadboard.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p><img src="http://gdurl.com/jZmh" alt="" width="213" height="161" /></p>
+<p><img src="https://github.com/ecraft2learn/OER/blob/master/breadboard/breadboard.jpg" alt="" width="213" height="161" /></p>
 <p>&nbsp;</p>
 <p><img src="http://gdurl.com/4iCF" alt="" width="400" height="161" /></p>
 </td>
