--- a/color sensor/colour sensor.html
+++ b/color sensor/colour sensor.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p><img src="http://gdurl.com/eo-S" alt="" width="475" height="475" /></p>
+<p><img src="https://github.com/ecraft2learn/OER/blob/master/color%20sensor/color%20sensor.jpg" alt="" width="475" height="475" /></p>
 </td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">The light sensor works by shining a white light at an object and then&nbsp;recording the reflected colour. It can also record the intensity of the&nbsp;reflection (brightness).</h3>
