--- a/conductive thread/Conductive thread.html
+++ b/conductive thread/Conductive thread.html
@@ -3,12 +3,18 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p>&nbsp;<img src="http://gdurl.com/bYfW" alt="" width="350" height="263" /></p>
+<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20thread/thread.jpg" alt="" width="350" 
+height="263" /></p>
 </td>
 <td style="width: 502.578px;">
-<h3 style="text-align: justify;">A little thicker than every day polyester or cotton thread, but still thin enough to&nbsp;be sewn by hand in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</h3>
-<h3>Because it is strong and smooth, it is ideal for any&nbsp;wearable/e-textile project.&nbsp;Because it is made of stainless steel fibers, it will not&nbsp;oxidize: your projects will not "stop working" because of oxidation after a few&nbsp;months and its safe to wash.</h3>
-<h3>In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 tips</a>&nbsp;you get to know what it&acute;s made of, how it works, what is good for (and not good too). All you need for your project!</h3>
+<h3 style="text-align: justify;">A little thicker than every day polyester or cotton thread, but still thin enough 
+to&nbsp;be sewn by hand in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</h3>
+<h3>Because it is strong and smooth, it is ideal for any&nbsp;wearable/e-textile project.&nbsp;Because it is made of 
+stainless steel fibers, it will not&nbsp;oxidize: your projects will not "stop working" because of oxidation after a 
+few&nbsp;months and its safe to wash.</h3>
+<h3>In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 
+tips</a>&nbsp;you get to know what it&acute;s made of, how it works, what is good for (and not good too). All you need for 
+your project!</h3>
 </td>
 </tr>
 </tbody>
