--- a/accelerometer/accelerometer.html
+++ b/accelerometer/accelerometer.html
@@ -2,7 +2,7 @@
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;"><span style="color: #000000;"><img src="https://github.com/ecraft2learn/OER/blob/master/accelerometer/accelerometer.png" alt="" width="298" height="265" /></span></td>
+<td style="width: 310.422px;"><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/accelerometer/accelerometer.png" alt="" width="298" height="265" /></span></td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;"><span style="color: #000000;">An accelerometer is an electromechanical device that will measure acceleration forces. These forces may be static, like the constant force of gravity pulling at your feet, or they could be&nbsp;dynamic - caused by moving or vibrating the accelerometer.</span></h3>
 <h3 style="text-align: justify;"><span style="color: #000000;">It senses acceleration over (x,y,z) axes and returns a value that it is usually used to describe the&nbsp;orientation of an artefact. The sensing axes can go from 2 to several (12 and more). </span></h3>
