--- a/DC motor/DC motor.html
+++ b/DC motor/DC motor.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/DC%20motor/DC%20motor.jpg" alt="" width="342" 
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/DC%20motor/DC%20motor.jpg" alt="" width="342" 
 height="257" /></p>
 </td>
 <td style="width: 502.578px;">
