--- a/breadboard/breadboard.html
+++ b/breadboard/breadboard.html
@@ -3,9 +3,9 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p><img src="https://github.com/ecraft2learn/OER/blob/master/breadboard/breadboard.jpg" alt="" width="213" height="161" /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/breadboard/breadboard.jpg" alt="" width="213" height="161" /></p>
 <p>&nbsp;</p>
-<p><img src="http://gdurl.com/4iCF" alt="" width="400" height="161" /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/breadboard/breadboard2.jpg" alt="" width="400" height="161" /></p>
 </td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">A breadboard is a solderless device for temporary prototype with electronics and test circuit&nbsp;designs. Most electronic components in electronic circuits can be interconnected by inserting their&nbsp;leads or terminals into the holes and then making connections through wires where appropriate.</h3>
