--- a/conductive paint/conductive paint.html
+++ b/conductive paint/conductive paint.html
@@ -3,16 +3,13 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20paint/bare-conductive.jpg" alt="" 
-width="423" height="238" /></p>
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/conductive%20paint/bare-conductive.jpg" alt="" width="423" height="238" /></p>
 </td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">Paint that allows electricity to flow.</h3>
-<h3 style="text-align: justify;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, 
-metal, etc. Need to wait for paint to dry.</h3>
-<h3 style="text-align: justify;">Tip: this material can be&nbsp;expensive! Sometime the use of a graphite pencil do the 
-same job.</h3>
-<h3>This conductive paint video will wire you up: https://www.youtube.com/watch?v=ySalbunIPNw .</h3>
+<h3 style="text-align: justify;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</h3>
+<h3 style="text-align: justify;">Tip: this material can be&nbsp;expensive! Sometime the use of a graphite pencil do the same job.</h3>
+<h3>This <a href="https://www.youtube.com/watch?v=ySalbunIPNw" target="_blank" rel="noopener">Conductive paint</a>&nbsp;will wire you up.</h3>
 </td>
 </tr>
 </tbody>
