--- a/conductive thread/Conductive thread.html
+++ b/conductive thread/Conductive thread.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20thread/thread.jpg" alt="" width="350" 
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/conductive%20thread/thread.jpg" alt="" width="350" 
 height="263" /></p>
 </td>
 <td style="width: 502.578px;">
