--- a/copper tape/copper tape.html
+++ b/copper tape/copper tape.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 310.422px;">
-<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/copper%20tape/copper-tape.png" alt="" width="408" 
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/copper%20tape/copper-tape.png" alt="" width="408" 
 height="236" /></p>
 </td>
 <td style="width: 502.578px;">
