Update analag and digital signs.html

--- a/digital and analog signals/analag and digital signs.html
+++ b/digital and analog signals/analag and digital signs.html
@@ -3,7 +3,7 @@
 <tbody>
 <tr>
 <td style="width: 311.625px;">
-<p>&nbsp;<img src="http://gdurl.com/H3QI" alt="" width="390" height="191" /></p>
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/digital%20and%20analog%20signals/Analog-Signal-Vs-digital-Signal.jpg" alt="" width="390" height="191" /></p>
 <h3>&nbsp;</h3>
 <h3>&nbsp;</h3>
 </td>
