--- a/flex sensor/flex sensor.html
+++ b/flex sensor/flex sensor.html
@@ -2,7 +2,7 @@
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">&nbsp;&nbsp;<img src="http://gdurl.com/8b0Mh" alt="" width="226" height="185" />&nbsp;<img src="http://gdurl.com/pEXT" alt="" width="253" height="189" /></td>
+<td style="width: 310.422px;">&nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/flex%20sensor/flex-sensor-direction.png" alt="" width="226" height="185" />&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/flex%20sensor/flex%20sensor%20glove.jpg" alt="" width="253" height="189" /></td>
 <td style="width: 502.578px; text-align: justify;">
 <h3>A&nbsp;flex sensor&nbsp;or&nbsp;bend sensor&nbsp;is a&nbsp;sensor&nbsp;that measures the amount&nbsp;of&nbsp;deflection&nbsp;or&nbsp;bending.</h3>
 <h3>Usually, the sensor is stuck to the surface, and resistance of&nbsp;sensor element is varied by bending the surface, which return a resistance value depending&nbsp;the amount of bending.</h3>
