--- a/gyroscope sensor/gyroscope.html
+++ b/gyroscope sensor/gyroscope.html
@@ -5,7 +5,7 @@
 <td style="width: 310.422px;">&nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/gyroscope%20sensor/gyroscope%20directons.jpg" width="353" height="179" /></td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">A&nbsp;device used for measuring or maintaining orientation and angular velocity. It&nbsp; senses rotation in degrees over the 3 axes (XYZ).</h3>
-<h3 style="text-align: justify;">In this <a href="https://www.youtube.com/watch?v=eqZgxR6eRjo">tutorial</a>, you find out about gyroscope and other&nbsp;Microelectromechanical systems (MEMS) in an arduino project.&nbsp;</h3>
+<h3 style="text-align: justify;">In this <a href="https://www.youtube.com/watch?v=eqZgxR6eRjo" target="_blank" rel="noopener">tutorial</a>, you find out about gyroscope and other&nbsp;Microelectromechanical systems (MEMS) in an arduino project.&nbsp;</h3>
 </td>
 </tr>
 </tbody>
