--- a/jumper wires/jumper wire.html
+++ b/jumper wires/jumper wire.html
@@ -6,7 +6,7 @@
 <td style="width: 801px;">
 <h3 style="text-align: justify;">Electrical wire&nbsp;or group of them in a cable with a connector or pin at each end, which is&nbsp;normally used to interconnect the components of a&nbsp;breadboard, other prototype or test&nbsp;circuit, internally or with other equipment or components, without soldering.</h3>
 <p>&nbsp;</p>
-<p>&nbsp;&nbsp;<img src="http://gdurl.com/zHq5" alt="" width="272" height="181" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="http://gdurl.com/Qjgq " alt="" width="325" height="226" /></p>
+<p>&nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/jumper%20wires/jumper%20wires2.jpg" alt="" width="332" height="222" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/jumper%20wires/jumper%20wires.jpg" alt="" width="325" height="226" /></p>
 </td>
 </tr>
 </tbody>
