--- a/magnetic switch/magnetic switch.html
+++ b/magnetic switch/magnetic switch.html
@@ -2,9 +2,10 @@
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;"><img src="http://gdurl.com/HR3h" alt="" width="227" height="227" /></td>
+<td style="width: 310.422px;"><img src="https://github.com/ecraft2learn/OER/blob/master/magnetic%20switch/magnetic-door-switch-set.jpg?raw=true" alt="" width="227" height="227" /></td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">An electrical switch that reacts when a magnetic field affects it. You can easily apply it&nbsp;in a door, a window or a drawer to detect if the door is open or closed.</h3>
+<h3>How easy is to make an <a href="https://www.youtube.com/watch?v=oum4zNXg7zs">Arduino Reed Switch (magnet sensor) with LED</a>!</h3>
 </td>
 </tr>
 </tbody>
