--- a/microphone/microphone.html
+++ b/microphone/microphone.html
@@ -2,10 +2,11 @@
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">&nbsp;<img src="http://gdurl.com/tjnJ" alt="" width="292" height="292" /></td>
+<td style="width: 310.422px;">&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/microphone/mic.jpg" alt="" width="292" height="292" /></td>
 <td style="width: 502.578px;">
 <h3 style="text-align: justify;">This sensor perceives sound signals and distinguishes, for example, between a loud sound and a&nbsp;weak sound.</h3>
 <h3 style="text-align: justify;">Tip: Not useful for human voice recording projects!</h3>
+<h3>Here an example of how an <a href="https://www.youtube.com/watch?v=RK9d6jKXaBU" target="_blank" rel="noopener">Arduino and microphone</a> can rock your project!</h3>
 </td>
 </tr>
 </tbody>
