--- a/piezo sensor/piezo sensor.html
+++ b/piezo sensor/piezo sensor.html
@@ -6,7 +6,8 @@
 <td style="width: 788.805px;">
 <h3 style="text-align: justify;">A device that uses the&nbsp;piezoelectric effect to measure changes&nbsp;in&nbsp;pressure,&nbsp;acceleration,&nbsp;temperature,&nbsp;strain, or&nbsp;force&nbsp;by converting them to electricity&nbsp;(voltage).</h3>
 <h3 style="text-align: justify;">The prefix&nbsp;piezo-&nbsp;is Greek for "press" or "squeeze".</h3>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="http://gdurl.com/iKOH " alt="" width="297" height="160" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="http://gdurl.com/YFFO" alt="" width="285" height="207" /></p>
+<h3 style="text-align: justify;">If you want to investigate more about piezo mechanisms for motion control, check out this <a href="https://www.youtube.com/watch?v=fHp95e-CwWQ&amp;t=6s" target="_blank" rel="noopener">video</a>!&nbsp;</h3>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/piezo%20sensor/SchemaPiezo.gif" alt="" width="256" height="256" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/piezo%20sensor/piezo%20sensor.jpg" alt="" width="285" height="207" /></p>
 </td>
 </tr>
 </tbody>
