--- a/pressure sensor/pressure sensor.html
+++ b/pressure sensor/pressure sensor.html
@@ -7,8 +7,8 @@
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
 </td>
 <td style="width: 755.102px;">
-<h3 style="text-align: justify;">A device that senses pressure and converts it into an electric signal/value where the&nbsp;amount depends upon the pressure applied.</h3>
-<p><img src="http://gdurl.com/rBWL" alt="" width="205" height="205" /></p>
+<h3 style="text-align: justify;">A device that senses pressure and converts it into an electric signal/value where the&nbsp;amount depends upon the pressure applied, like showed in tthis <a href="https://www.youtube.com/watch?v=LcGBfYhjkkE" target="_blank" rel="noopener">video</a>.</h3>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/pressure%20sensor/pressure%20sensor.jpg" alt="" width="205" height="205" /></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
 </td>
 </tr>
