--- a/resistor/resistors.html
+++ b/resistor/resistors.html
@@ -3,12 +3,13 @@
 <tbody>
 <tr>
 <td style="width: 301px;">
-<p>&nbsp;<img src="http://gdurl.com/jvA8" alt="" width="244" height="325" /></p>
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/resistor/resistor.jpg" alt="" width="244" height="325" /></p>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
 </td>
 <td style="width: 497.387px;">
 <h3 style="text-align: justify;">Common electronic component to limit the current in a circuit.</h3>
 <h3 style="text-align: justify;">The coloured stripes indicate&nbsp;the resistor value: the bigger the value, the more resistance resulting in decreased current&nbsp;flow.</h3>
+<h3 style="text-align: justify;">Everything you need to know about resistors, you can discover right in this <a href="https://www.youtube.com/watch?v=KWIZcuff74I" target="_blank" rel="noopener">video</a>.</h3>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
 </td>
 </tr>
