--- a/sensors/sensors.html
+++ b/sensors/sensors.html
@@ -6,7 +6,7 @@
 <tr>
 <td style="width: 252.57px;">
 <p>&nbsp;</p>
-<p><img src="http://gdurl.com/wGL6" alt="" width="300" height="300" /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/sensors/sound%20sensor.JPG" alt="" width="300" height="300" /></p>
 </td>
 <td style="width: 544.43px;">
 <h3 style="text-align: justify;">Analog sensors capture analog signals that can assume any value in a range. An&nbsp;interesting way to think about this is that an Analog Signal works like a tuner on an&nbsp;older radio. You can turn it up or down in a continuous motion. You can fine tune it by&nbsp;turning the knob ever so slightly.</h3>
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 <td style="width: 252.57px;">
-<p>&nbsp; &nbsp; &nbsp; &nbsp;<img src="http://gdurl.com/VKqd" alt="" width="225" height="225" /></p>
+<p>&nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/sensors/push%20buttom.jpg" alt="" width="225" height="225" /></p>
 </td>
 <td style="width: 544.43px;">
 <h3 style="text-align: justify;">Digital sensors generate what is called a "Discrete Signal". This means that there is a&nbsp;range of values that the sensor can output, but the value must increase in steps. For example, consider a push button switch. This is one of the simplest forms of&nbsp;sensors. It has two discrete values. It is on, or it is off. Other "discrete" sensors might&nbsp;provide you with a binary value.&nbsp;</h3>
