--- a/servo motor/servo motor.html
+++ b/servo motor/servo motor.html
@@ -1,4 +1,5 @@
 <h1 style="text-align: justify;">Servo motor</h1>
-<h3 style="text-align: justify;">A type of DC motor that allows for precise control of angular position. It consists of a&nbsp;motor&nbsp;coupled to a sensor for position feedback. It also requires a&nbsp;servo&nbsp;drive to&nbsp;complete the system. The drive uses the feedback sensor to precisely control the&nbsp;rotary position of the&nbsp;motor. It can be used for tasks that require precise motion (e.g., a&nbsp;robot arm).</h3>
+<h3 style="text-align: justify;">A type of DC motor that allows for precise control of angular position (180&ordm;). It consists of a&nbsp;motor&nbsp;coupled to a sensor for position feedback. It also requires a&nbsp;servo&nbsp;drive to&nbsp;complete the system. The drive uses the feedback sensor to precisely control the&nbsp;rotary position of the&nbsp;motor. It can be used for tasks that require precise motion (e.g., a&nbsp;robot arm).</h3>
+<h3 style="text-align: justify;">Check out <a href="https://www.youtube.com/watch?v=gviUtLsHDtg" target="_blank" rel="noopener">here</a> how it works!</h3>
 <p>&nbsp;</p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="http://gdurl.com/3lYR" alt="" width="560" height="283" /></p>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/servo%20motor/servo%20motor.png" alt="" width="560" height="283" /></p>
