--- a/switch/switch.html
+++ b/switch/switch.html
@@ -3,17 +3,17 @@
 <table style="height: 340px;" width="836">
 <tbody>
 <tr>
-<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="http://gdurl.com/Lvrk" alt="" width="209" height="209" /></td>
+<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/switch/toggle%20switch.jpg" alt="" width="209" height="209" /></td>
 <td style="width: 416.016px;">
 <h3 style="text-align: justify;">Toggle switch</h3>
-<h3 style="text-align: justify;">A toggle switch is manually actuated by a mechanical&nbsp;lever, handle or rocking&nbsp;mechanism. A very common use of this type of switch is to switch lights or other&nbsp;electrical equipment on or off.</h3>
+<h3 style="text-align: justify;">A toggle switch is manually actuated by a mechanical&nbsp;lever, handle or rocking&nbsp;mechanism. A very common use of this type of switch is to switch lights or other&nbsp;electrical equipment on or off. Everything (but really, everything) you wanna know about it, you can check out in this <a href="https://www.youtube.com/watch?v=uNIPx_bJ8VY" target="_blank" rel="noopener">video</a>.</h3>
 </td>
 </tr>
 <tr style="text-align: justify;">
-<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="http://gdurl.com/mW9E" alt="" width="251" height="200" /></td>
+<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/switch/pushbuttom.jpg" alt="" width="251" height="200" /></td>
 <td style="width: 416.016px;">
 <h3>Pushbutton or button (input)</h3>
-<h3>A switch mechanism used for controlling your circuit. For instance, in a circuit, you can make a&nbsp;LED turn on/off by pressing a button.</h3>
+<h3>A switch mechanism used for controlling your circuit. For instance, in a circuit, you can make a&nbsp;LED turn on/off by pressing a button. <a href="https://www.youtube.com/watch?v=xEdZCRZVEtY" target="_blank" rel="noopener">Here</a> you can learn how a pushbuttom works in a circuit simulator.&nbsp;</h3>
 </td>
 </tr>
 </tbody>
