--- a/ultrasonic sensor/ultrasonic sensor.html
+++ b/ultrasonic sensor/ultrasonic sensor.html
@@ -3,10 +3,11 @@
 <table style="height: 319px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 351.016px; text-align: justify;"><img src="http://gdurl.com/xq_v" alt="" width="310" height="203" /></td>
+<td style="width: 351.016px; text-align: justify;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/ultrasonic%20sensor/Ultrasonic-Sensor.jpg" alt="" width="310" height="203" /></td>
 <td style="width: 462.266px;">
 <h3 style="text-align: justify;">It detects the distance of the closest object in front of the sensor (it use sound instead of light&nbsp;as in the IR sensor).&nbsp;</h3>
 <h3 style="text-align: justify;">It measures&nbsp;distance by sending out a sound wave at a specific frequency and listening for that sound&nbsp;wave to bounce back. By recording the elapsed time between the sound wave being&nbsp;generated and the sound wave bouncing back, it is possible to calculate the distance&nbsp;between the sonar sensor and the object.</h3>
+<h3 style="text-align: justify;">This <a href="https://www.youtube.com/watch?v=DEof9lG-1PU" target="_blank" rel="noopener">video</a> explains how it works and some possibilities to use it in your projects.</h3>
 <p>&nbsp;</p>
 </td>
 </tr>
