--- a/Cura Videos 3/3_Print_Preparation.html
+++ b/Cura Videos 3/3_Print_Preparation.html
@@ -1,3 +1,3 @@
 <h1>Print Preparation</h1>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1pD4cr0CysbJzNl7ESgzBiCYvl6Uk859s/preview" width="640" height="480"></iframe>
+<iframe src="https://www.youtube.com/watch?v=i2U49usFo10" width="640" height="480"></iframe>
