--- a/Cura Videos 3/1_Cura_Introduction.html
+++ b/Cura Videos 3/1_Cura_Introduction.html
@@ -1,4 +1,4 @@
 <h1>Cura Introduction</h1>
-
-<p><img src="http://gdurl.com/is5K" alt="" /><video controls="controls" width="600" height="300">
-<source src="http://gdurl.com/is5K" /></video></p>
+<h3>How to prepare your 3D model to 3D printing.</h3>
+<p>&nbsp;</p>
+<p><iframe src="https://www.youtube.com/embed/aKKUXG8nJ3o" width="500" height="400"></iframe></p>
