--- a/Cura Videos 3/2_View Manipulation.html
+++ b/Cura Videos 3/2_View Manipulation.html
@@ -1,6 +1,4 @@
 <h1>View Manipulation</h1>
+<h3>How you can navigate your model into cura.</h3>
 <p>&nbsp;</p>
-<p><img src="http://gdurl.com/DyZt" alt="" /><video controls="controls" width="600" height="300">
-<source src="http://gdurl.com/DyZt" /></video></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><iframe src="https://www.youtube.com/embed/hFrGceysQL0" width="500" height="400"></iframe></p>
