--- a/Cura Videos 3/3_Print_Preparation.html
+++ b/Cura Videos 3/3_Print_Preparation.html
@@ -1,3 +1,4 @@
 <h1>Print Preparation</h1>
+<h3>Make the final settings for the printing.</h3>
 <p>&nbsp;</p>
-<iframe src="https://www.youtube.com/watch?v=i2U49usFo10" width="640" height="480"></iframe>
+<p><iframe src="https://www.youtube.com/embed/Ril_lOuHV30" width="500" height="400"></iframe></p>
