--- a/Cura Videos 3/5_Layers_View.html
+++ b/Cura Videos 3/5_Layers_View.html
@@ -1,3 +1,4 @@
 <h1>Layers View</h1>
+<h3>How to view the layers of your project to make sure you will succeed with your project.</h3>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1wEGnWE729O4bnKfPG_mRknFdKR5WWMNv/preview" width="640" height="480"></iframe>
+<p><iframe src="https://www.youtube.com/embed/bRCwWbOlPPw" width="500" height="400"></iframe></p>
