--- a/Cura Videos 3/7_Layer Heights.html
+++ b/Cura Videos 3/7_Layer Heights.html
@@ -1,3 +1,4 @@
-<h1>Layer Hights</h1>
+<h1>Layer Heights</h1>
+<h3>Learn about the effects of layer heights in 3D prints.</h3>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1Cj74bylA2YSJNc-iOeAdZhObNkqcP1Ml/preview" width="640" height="480"></iframe>
+<p><iframe src="https://www.youtube.com/embed/B_H5c2uZkF0" width="500" height="400"></iframe></p>
