--- a/Cura Videos 3/8_Build_Plate_Adhesion.html
+++ b/Cura Videos 3/8_Build_Plate_Adhesion.html
@@ -1,3 +1,4 @@
 <h1>Build Plate Adhesion</h1>
+<h3>The better the quality and adhesion of your first layer to the build plate, the more successful your project will be.</h3>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1Bf0UUmL_snJXCaMtinMZA--zx-zjh_gb/preview" width="640" height="480"></iframe>
+<p><iframe src="https://www.youtube.com/embed/k39Po66MyNI" width="500" height="400"></iframe></p>
