--- a/Cura Videos 3/9_Custom Options.html
+++ b/Cura Videos 3/9_Custom Options.html
@@ -1,3 +1,4 @@
 <h1>Custom Options</h1>
+<h3>Start to play around with your print setup.</h3>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1qmpTScAWBaH9EKycxPS4zw4aLCZM5WyJ/preview" width="640" height="480"></iframe> 
+<p><iframe src="https://www.youtube.com/embed/1gYRCw9PZ8I" width="500" height="400"></iframe></p>
