--- a/Cura Videos 3/10_Support1.html
+++ b/Cura Videos 3/10_Support1.html
@@ -1,4 +1,4 @@
 <h1>Support 1</h1>
-<h3>If you want to get success with 3D print, then layers must be on top of other layers.</h3>
+<h3>Support your project by (re)orienting your model.</h3>
 <p>&nbsp;</p>
 <p><iframe src="https://www.youtube.com/embed/ccOaYicKHuw" width="500" height="400"></iframe></p>
