--- a/Cura Videos 3/12_Support3.html
+++ b/Cura Videos 3/12_Support3.html
@@ -1,3 +1,4 @@
 <h1>Support 3</h1>
+<h3>Methods to eliminate the need for support.</h3>
 <p>&nbsp;</p>
-<iframe src="https://drive.google.com/file/d/1NFyAtRXvd_dSZXIiz4SHOTovdmpg-uz8/preview" width="640" height="480"></iframe> 
+<p><iframe src="https://www.youtube.com/embed/KceyYvYfAGs" width="500" height="400"></iframe></p>
