--- a/IR array/IR array.html
+++ b/IR array/IR array.html
@@ -1,12 +1,27 @@
+<h1><span style="color: #000000;"><img 
+src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" 
+/></span></h1>
 <h1><span style="color: #000000;">Infrared (IR) array</span></h1>
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 243.957px;"><img src="http://gdurl.com/adM4" alt="" width="219" height="219" /></td>
+<td style="width: 243.957px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR_array.jpg?
+raw=true" alt="" width="363" height="242" /></td>
 <td style="width: 568.043px;">
-<h3 style="text-align: justify;">A device with several coupled IR sensors that send and receive LEDs. The infrared light receive&nbsp;back the light from the transmitter LED when hit a reflective surface.</h3>
-<h3 style="text-align: justify;">It senses the presence or&nbsp;the absence of a line or a object moving across this line, for example.</h3>
+<h3 style="text-align: justify;">&nbsp;</h3>
+<h3 style="text-align: justify;">A device with IR sensors that send and receive LEDs. The infrared light receive&nbsp;back 
+the light from the transmitter LED when hit a reflective surface.</h3>
+<h3 style="text-align: justify;">It senses the presence or&nbsp;the absence of a line or a object moving across this line, 
+for example.</h3>
+<h3 style="text-align: justify;">Download this file <a href="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR
+%20ARRAY.docx?raw=true">here</a>.</h3>
+<p>&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" 
+height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 
+0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="122" height="43" 
+/></a></p>
