--- a/IR array/IR array.html
+++ b/IR array/IR array.html
@@ -2,20 +2,26 @@
 src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" 
 /></span></h1>
 <h1><span style="color: #000000;">Infrared (IR) array</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 243px; width: 830px;">
+<tbody>
+<tr style="height: 247px;">
+<td style="width: 358.145px; height: 247px;"><img src="https://github.com/ecraft2learn/OER/blob/master/IR
+%20array/IR_array.jpg?raw=true" alt="" width="342" height="227" /></td>
+<td style="width: 459.855px; height: 247px;">
+<p style="text-align: justify;">A device with IR sensors that send and receive LEDs. The infrared light receive&nbsp;back 
+the light from the transmitter LED when hit a reflective surface.</p>
+<table style="height: 101px; border: 1px solid black; margin-left: auto; margin-right: auto;" width="429">
 <tbody>
 <tr>
-<td style="width: 243.957px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR_array.jpg?
-raw=true" alt="" width="363" height="242" /></td>
-<td style="width: 568.043px;">
-<h3 style="text-align: justify;">&nbsp;</h3>
-<h3 style="text-align: justify;">A device with IR sensors that send and receive LEDs. The infrared light receive&nbsp;back 
-the light from the transmitter LED when hit a reflective surface.</h3>
-<h3 style="text-align: justify;">It senses the presence or&nbsp;the absence of a line or a object moving across this line, 
+<td style="width: 422.266px;">
+<h3 style="text-align: center;">It senses the presence or&nbsp;the absence of a line or a object moving across this line, 
 for example.</h3>
-<h3 style="text-align: justify;">Download this file <a href="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR
-%20ARRAY.docx?raw=true">here</a>.</h3>
-<p>&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="text-align: justify;">&nbsp;<a href="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR%20ARRAY.docx?
+raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
