--- a/DC motor/DC motor.html
+++ b/DC motor/DC motor.html
@@ -1,27 +1,27 @@
-<h1><span style="color: #000000;"><img 
-src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" 
-/></span></h1>
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">DC motor</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 273px; width: 834px;">
 <tbody>
 <tr style="height: 283.047px;">
-<td style="width: 310.422px; height: 283.047px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/DC%20motor/DC%20motor.gif" alt="" width="251" 
-height="248" /></p>
+<td style="width: 311.016px; height: 283.047px;">
+<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/DC%20motor/DC%20motor.gif" alt="" width="251" height="248" /></p>
 </td>
-<td style="width: 502.578px; height: 283.047px;">
-<h3 style="text-align: justify;">A motor that converts direct current (e.g., from a battery) into motion. The most 
-common&nbsp;types rely on the forces produced by magnetic fields.</h3>
-<h3 style="text-align: justify;">With this, you can make wheels turn, for&nbsp;instance.</h3>
-<h3>More information, check&nbsp;<a href="https://www.youtube.com/watch?v=LAtPHANEfQo" target="_blank" rel="noopener">DC 
-Motor, how it works</a>.</h3>
-<h3>Download this file <a href="https://github.com/ecraft2learn/OER/blob/master/DC%20motor/DC%20motor.docx?
-raw=true">here</a>.&nbsp;</h3>
+<td style="width: 511.016px; height: 283.047px;">
+<p style="font-size: 15px;">A motor that converts direct current (e.g., from a battery) into motion. The most common&nbsp;types rely on the forces produced by magnetic fields.</p>
+<table style="border: 1px solid black; height: 58px;" width="510">
+<tbody>
+<tr>
+<td style="width: 503.516px;">
+<h3 style="text-align: center;">With this, you can make wheels turn, for&nbsp;instance.</h3>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="font-size: 15px;">More information, check&nbsp;<a href="https://www.youtube.com/watch?v=LAtPHANEfQo" target="_blank" rel="noopener">DC Motor, how it works</a>.</p>
+<p style="font-size: 15px;"><a href="https://github.com/ecraft2learn/OER/blob/master/DC%20motor/DC%20motor.docx?raw=true"><button type="button">Click Me!</button></a>&nbsp;to download this file.&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" 
-height="66" />&nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_CC.png" 
-alt="" width="88" height="31" /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_CC.png" alt="" width="88" height="31" /></p>
