--- a/accelerometer/accelerometer.html
+++ b/accelerometer/accelerometer.html
@@ -1,16 +1,37 @@
+<h1><span style="color: #000000;"><img 
+src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" 
+/></span></h1>
 <h1><span style="color: #000000;">Accelerometer</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 254px; width: 843px;">
+<tbody>
+<tr style="height: 210.133px;">
+<td style="width: 261.809px; height: 210.133px;">&nbsp; &nbsp;&nbsp;<img 
+src="https://github.com/ecraft2learn/OER/blob/master/accelerometer/Accelerometer.jpg?raw=true" alt="" width="223" 
+height="223" /></td>
+<td style="width: 569.191px; height: 210.133px;">
+<p style="font-size: 16px;"><span style="color: #000000;">An accelerometer is a device that measures acceleration forces. 
+These forces may be static, like gravity, or dynamic - caused by moving or vibrating the accelerometer.</span></p>
+<table style="width: 540.652px; height: 28px; border: 1px solid black;">
 <tbody>
 <tr>
-<td style="width: 310.422px;"><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/accelerometer/accelerometer.png" alt="" width="298" height="265" /></span></td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;"><span style="color: #000000;">An accelerometer is an electromechanical device that will measure acceleration forces. These forces may be static, like the constant force of gravity pulling at your feet, or they could be&nbsp;dynamic - caused by moving or vibrating the accelerometer.</span></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;">It senses acceleration over (x,y,z) axes and returns a value that it is usually used to describe the&nbsp;orientation of an artefact. The sensing axes can go from 2 to several (12 and more). </span></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;">An&nbsp;accelerometer can help your project to understand its surroundings better. Is it driving uphill? Is it&nbsp;going to fall over when it takes another step? Is it flying horizontally or is it dive bombing your professor?</span></h3>
-<h3><strong><span style="color: #000000;">Check out&nbsp;<a href="https://www.youtube.com/watch?v=i2U49usFo10" target="_blank" rel="noopener">How an accelerometer works!</a>&nbsp;for&nbsp;</span></strong><strong>more information</strong></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></h3>
+<td style="width: 533.652px;">
+<h3 style="text-align: center;">An&nbsp;accelerometer can help your project to understand its surroundings better. Is it 
+driving uphill? Is it&nbsp;going to fall over when it takes another step? Is it flying horizontally?</h3>
+</td>
+</tr>
+</tbody>
+</table>
+<p><span style="font-size: 16px;">Check out&nbsp;<a href="https://www.youtube.com/watch?v=i2U49usFo10" target="_blank" 
+rel="noopener">How an accelerometer works!</a>&nbsp;for more information.</span></p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/accelerometer/Accelerometer.docx?
+raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" 
+height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 
+0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="122" height="43" 
+/></a></p>
