--- a/batteries/batteries.html
+++ b/batteries/batteries.html
@@ -1,16 +1,25 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Battery</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 160px; width: 845px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;"><span style="color: #000000;"><img src="http://gdurl.com/9Msw" alt="" width="316" height="176" /><img src="http://gdurl.com/d-Ui" alt="" width="174" height="164" /></span></td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;"><span style="color: #000000;">An electric battery is a device consisting of one or more electrochemical cells with external connections provided to power electrical devices, such as flashlights, smartphones and electric cars. </span></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;">Batteries are useful if your project cannot be powered by the Arduino. All kind of batteries might be used (from a standard AAA, coin, lithium, etc.). </span></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;">Electronic projects usually require 5V, so a voltage range between 4.5 to 9V would work. Some projects might require 3.3 V, in this case two AA or a couple of coin batteries might be useful. More amperage the battery provide, the more they will last. </span></h3>
-<h3><span style="color: #000000;">Other power options: Batteries + battery holders, power bank (mobile phone charger), wired wall socket connection.</span></h3>
-<h3 style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;<a href="https://www.youtube.com/watch?v=9OVtk6G2TnQ" target="_blank" rel="noopener">How batteries work</a>&nbsp;will charge your knowledge!</strong></span></h3>
+<td style="width: 317.266px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/batteries/Batteries.jpg?raw=true" alt="" width="300" height="214" /></td>
+<td style="width: 516.016px;">
+<table style="height: 26px;" width="514">
+<tbody>
+<tr>
+<td style="width: 507.266px;">
+<h3 style="text-align: center; border: 1px solid black;">An electric battery is a device consisting of one or more electrochemical cells with external connections to power electrical devices, such as flashlights, smartphones and electric cars.</h3>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="font-size: 16px;">Batteries are useful if your project cannot be powered by the Arduino. All kind of batteries might be used (from a standard AAA, coin, lithium, etc.).</p>
+<p style="font-size: 16px;"><span style="color: #000000;"><a href="https://www.youtube.com/watch?v=9OVtk6G2TnQ" target="_blank" rel="noopener">How batteries work</a>&nbsp;will charge your knowledge!</span></p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/batteries/Batteries.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_PD.png?raw=true" alt="" width="60" height="60" />&nbsp; &nbsp;</p>
