--- a/color sensor/colour sensor.html
+++ b/color sensor/colour sensor.html
@@ -1,15 +1,26 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Colour sensor</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 277px; width: 835px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/color%20sensor/color%20sensor.jpg" alt="" width="475" height="475" /></p>
+<td style="width: 250.855px;">
+<h3 style="text-align: center;"><img src="https://github.com/ecraft2learn/OER/blob/master/color%20sensor/Color%20sensor.jpg?raw=true" alt="" width="214" height="214" /></h3>
 </td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;">The light sensor works by shining a white light at an object and then&nbsp;recording the reflected colour. It can also record the intensity of the&nbsp;reflection (brightness).</h3>
-<h3 style="text-align: justify;">Through red, green and blue (RGB) colour filters,&nbsp;the photodiode converts the amount of light to current. The converter then&nbsp;converts the current to voltage, which arduino can read.</h3>
-<h3>This tutorial ilustrates how a <a href="https://www.youtube.com/watch?v=JIz0_y5MRlY">Colour sensor detector</a> works.</h3>
+<td style="width: 571.145px;">
+<table style="height: 83px;" width="572">
+<tbody>
+<tr style="height: 55.5938px;">
+<td style="width: 564.766px; height: 55.5938px;">
+<h3 style="text-align: center; border: 1px solid black;">The light sensor works by shining a white light at an object and then&nbsp;recording the reflected colour. It blinks the same color detected.</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="font-size: 16px;">Through red, green and blue (RGB) colour filters,&nbsp;the photodiode converts the amount of light to current. The converter then&nbsp;converts the current to voltage, which arduino can read.</p>
+<p style="font-size: 16px;">This tutorial ilustrates how a <a href="https://www.youtube.com/watch?v=JIz0_y5MRlY">Colour sensor detector</a> works.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/color%20sensor/Colour%20sensor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
