--- a/conductive paint/conductive paint.html
+++ b/conductive paint/conductive paint.html
@@ -1,16 +1,18 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Conductive paint</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 195px; width: 826px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/conductive%20paint/bare-conductive.jpg" alt="" width="423" height="238" /></p>
+<td style="width: 309.766px;">
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20paint/Conductive%20paint.jpg?raw=true" alt="" width="208" height="208" /></p>
 </td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;">Paint that allows electricity to flow.</h3>
-<h3 style="text-align: justify;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</h3>
-<h3 style="text-align: justify;">Tip: this material can be&nbsp;expensive! Sometime the use of a graphite pencil do the same job.</h3>
-<h3>This <a href="https://www.youtube.com/watch?v=ySalbunIPNw" target="_blank" rel="noopener">Conductive paint</a>&nbsp;will wire you up.</h3>
+<td style="width: 503.516px;">
+<h3 style="text-align: center;">Paint that allows electricity to flow.</h3>
+<p style="text-align: justify; font-size: 16px;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</p>
+<p style="text-align: justify; font-size: 16px;">This conductive paint video will wire you up: https://www.youtube.com/watch?v=ySalbunIPNw.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/conductive%20paint/Conductive%20paint.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
