--- a/copper tape/copper tape.html
+++ b/copper tape/copper tape.html
@@ -1,18 +1,18 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Copper tape</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 123px; width: 833px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/copper%20tape/copper-tape.png" alt="" width="408" 
-height="236" /></p>
+<td style="width: 311.016px;">
+<p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/copper%20tape/Copper%20tape.jpg?raw=true" alt="" width="275" height="155" /></p>
 </td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;">Copper tape provide ways to make surfaces conductive, and are useful when working 
-with&nbsp;children, most of the time applied to paper, cardboards, etc.</h3>
-<h3>Tip: you could use aluminium foil&nbsp;paper and glue to get the same effect!</h3>
-<h3><a href="https://www.youtube.com/watch?v=XKTPqtRwwXA" target="_blank" rel="noopener">Getting started with copper tape 
-for paper electronics</a>&nbsp;will inspire you to much more.</h3>
+<td style="width: 509.766px;">
+<h3 style="text-align: center;">Copper tape provide ways to make surfaces conductive.</h3>
+<p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=XKTPqtRwwXA" target="_blank" rel="noopener">Starting with copper tape</a>&nbsp;will inspire you for much more.</p>
+<p style="font-size: 16px;">Tip: you could use aluminium foil&nbsp;paper and glue to get the same effect!</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/copper%20tape/Copper%20tape.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;By <a title="User:Mosborne01" href="//commons.wikimedia.org/wiki/User:Mosborne01">Mosborne01</a> - <span class="int-own-work" lang="en">Own work</span>, <a title="Creative Commons Attribution-Share Alike 3.0" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=48475053">Link</a></p>
