--- a/gas sensor/gas sensor.html
+++ b/gas sensor/gas sensor.html
@@ -1,14 +1,27 @@
-<h1><span style="color: #000000;">Gas sensor (carbon dioxide, methane, etc.)</span></h1>
-<table style="height: 377px; width: 825px;">
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span style="color: #000000;">Gas sensor</span></h1>
+<table style="height: 271px; width: 829px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">&nbsp;&nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/gas%20sensor/gas%20sensor.jpg" alt="" width="290" height="161" /></td>
-<td style="width: 502.578px; text-align: justify;">
-<h3>A&nbsp;gas detector&nbsp;is a device that detects the presence of&nbsp;gases&nbsp;in an area, often as part of&nbsp;a&nbsp;safety system. This type of equipment is used to detect a&nbsp;gas leak&nbsp;or other emissions and&nbsp;can interface with a&nbsp;control system, so a process can be automatically shut down.</h3>
-<h3>For instance, a&nbsp;gas&nbsp;detector can sound an alarm to operators in the area where the leak is occurring, giving&nbsp;them the opportunity to leave.This type of device is important because there are many&nbsp;gases that can be harmful to organic life, such as humans or animals.</h3>
-<h3><a href="https://www.youtube.com/watch?v=BIf_mpnsZvY" target="_blank" rel="noopener">How to use gas sensor with Arduino</a>&nbsp;will support you in your projects!</h3>
+<td style="width: 311.016px; text-align: center;">
+<h3>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/gas%20sensor/gas%20sensor.jpg?raw=true" alt="" width="249" height="249" /></h3>
+</td>
+<td style="width: 506.016px; text-align: justify;">
+<table style="height: 80px;" width="499">
+<tbody>
+<tr>
+<td style="width: 492.266px; text-align: center; border: 1px solid black;">
+<h3>A&nbsp;gas detector&nbsp;is a device that detects the presence of&nbsp;gases&nbsp;in an area.&nbsp;</h3>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="font-size: 16px;">For instance, a&nbsp;gas&nbsp;detector can sound an alarm to operators in the area where a gas leak is occurring, giving&nbsp;them the opportunity to leave.</p>
+<p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=BIf_mpnsZvY" target="_blank" rel="noopener">How to use gas sensor with Arduino</a>&nbsp;will support you in your projects!</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/gas%20sensor/gas%20sensor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
