--- a/imput and output devices/input and output devices.html
+++ b/imput and output devices/input and output devices.html
@@ -1,28 +1,26 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Input and output devices</span></h1>
 <table style="height: 377px; width: 825px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">&nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/imput%20and
-%20output%20devices/Input%20Devices%20of%20Computer.png" alt="" width="377" height="213" /></td>
-<td style="width: 502.578px;">
+<td style="width: 241.125px;">&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/imput%20and%20output%20devices/Keyboard.jpg?raw=true" alt="" width="231" height="130" /></td>
+<td style="width: 570.875px;">
 <h3 style="text-align: justify;">Input device</h3>
-<h3 style="text-align: justify;"><br />Any hardware device used to capture and send data to the circuit that is built (e.g. 
-computer), allowing you to interact with and control it.</h3>
-<h3 style="text-align: justify;">Examples:&nbsp;microphone (capturing sound), webcam (capturing image/video), button 
-(capturing a push), etc.</h3>
+<p style="font-size: 16px;"><br />Any hardware device used to capture and send data to the circuit that is built (e.g. computer), allowing you to interact with and control it.</p>
+<p style="font-size: 16px;">Examples:&nbsp;microphone (capturing sound), webcam (capturing image/video), button (capturing a push), keyboard (capture letters) etc.</p>
 </td>
 </tr>
 <tr>
-<td style="width: 310.422px;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/imput%20and%20output
-%20devices/output-divices.png" alt="" width="417" height="239" /></td>
-<td style="width: 502.578px;">
+<td style="width: 241.125px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/imput%20and%20output%20devices/speakers.jpg?raw=true" alt="" width="331" height="219" /></td>
+<td style="width: 570.875px;">
 <h3 style="text-align: justify;">Output device</h3>
-<h3 style="text-align: justify;"><br />Any device that, when current is applied, can affect the physical world somehow, 
-through for instance showing light, making a sound, or making something&nbsp;else to move.</h3>
-<h3 style="text-align: justify;">Examples: LEDs, speakers or headphones, projectors.</h3>
+<p style="font-size: 16px;">Any device that, when current is applied, can affect the physical world somehow, through for instance showing light, making a sound, or making something&nbsp;else to move.</p>
+<p style="font-size: 16px;">Examples: LEDs, speakers or headphones, projectors.</p>
 </td>
 </tr>
 </tbody>
 </table>
-<h3 style="text-align: justify;">&nbsp;Explore more about input and output devices <a href="https://www.youtube.com/watch?
-v=aOKiDNmBH50" target="_blank" rel="noopener">here</a>! Some quiz also wait for you!</h3>
+<p>&nbsp;</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/imput%20and%20output%20devices/Input%20and%20output%20device.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_CC2.jpg?raw=true" alt="" width="46" height="46" /></p>
