--- a/DC motor/DC motor.html
+++ b/DC motor/DC motor.html
@@ -18,7 +18,7 @@
 </tbody>
 </table>
 <p style="font-size: 15px;">More information, check&nbsp;<a href="https://www.youtube.com/watch?v=LAtPHANEfQo" target="_blank" rel="noopener">DC Motor, how it works</a>.</p>
-<p style="font-size: 15px;"><a href="https://github.com/ecraft2learn/OER/blob/master/DC%20motor/DC%20motor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p style="font-size: 15px;"><a href="https://github.com/ecraft2learn/OER/raw/master/DC%20motor/DC%20motor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
 </td>
 </tr>
 </tbody>
