--- a/accelerometer/accelerometer.html
+++ b/accelerometer/accelerometer.html
@@ -23,8 +23,7 @@ driving uphill? Is it&nbsp;going to fall over when it takes another step? Is it 
 </table>
 <p><span style="font-size: 16px;">Check out&nbsp;<a href="https://www.youtube.com/watch?v=i2U49usFo10" target="_blank" 
 rel="noopener">How an accelerometer works!</a>&nbsp;for more information.</span></p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/accelerometer/Accelerometer.docx?
-raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/accelerometer/Accelerometer.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
