--- a/breadboard/Breadboard.html
+++ b/breadboard/Breadboard.html
@@ -18,7 +18,7 @@
 </tbody>
 </table>
 <p style="font-size: 16px;">This&nbsp;<a href="https://www.youtube.com/watch?v=S_a-qCy6Ekk" target="_blank" rel="noopener">Breadboard Tutorial</a>&nbsp;will explain you everything!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/breadboard/Breadboard.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/breadboard/Breadboard.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
