--- a/batteries/batteries.html
+++ b/batteries/batteries.html
@@ -16,7 +16,7 @@
 </table>
 <p style="font-size: 16px;">Batteries are useful if your project cannot be powered by the Arduino. All kind of batteries might be used (from a standard AAA, coin, lithium, etc.).</p>
 <p style="font-size: 16px;"><span style="color: #000000;"><a href="https://www.youtube.com/watch?v=9OVtk6G2TnQ" target="_blank" rel="noopener">How batteries work</a>&nbsp;will charge your knowledge!</span></p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/batteries/Batteries.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/batteries/Batteries.jpg"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
