--- a/color sensor/colour sensor.html
+++ b/color sensor/colour sensor.html
@@ -18,7 +18,7 @@
 </table>
 <p style="font-size: 16px;">Through red, green and blue (RGB) colour filters,&nbsp;the photodiode converts the amount of light to current. The converter then&nbsp;converts the current to voltage, which arduino can read.</p>
 <p style="font-size: 16px;">This tutorial ilustrates how a <a href="https://www.youtube.com/watch?v=JIz0_y5MRlY">Colour sensor detector</a> works.</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/color%20sensor/Colour%20sensor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/color%20sensor/Colour%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
