--- a/conductive paint/conductive paint.html
+++ b/conductive paint/conductive paint.html
@@ -10,7 +10,7 @@
 <h3 style="text-align: center;">Paint that allows electricity to flow.</h3>
 <p style="text-align: justify; font-size: 16px;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</p>
 <p style="text-align: justify; font-size: 16px;">This conductive paint video will wire you up: https://www.youtube.com/watch?v=ySalbunIPNw.</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/conductive%20paint/Conductive%20paint.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20paint/Conductive%20paint.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
