--- a/conductive thread/Conductive thread.html
+++ b/conductive thread/Conductive thread.html
@@ -1,21 +1,26 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Conductive thread</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 303px; width: 827px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/conductive%20thread/thread.jpg" alt="" width="350" 
-height="263" /></p>
+<td style="width: 283.352px;">
+<p>&nbsp; &nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20thread/Conductive%20thread.jpg?raw=true" alt="" width="226" height="226" /></p>
 </td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;">A little thicker than every day polyester or cotton thread, but still thin enough 
-to&nbsp;be sewn by hand in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</h3>
-<h3>Because it is strong and smooth, it is ideal for any&nbsp;wearable/e-textile project.&nbsp;Because it is made of 
-stainless steel fibers, it will not&nbsp;oxidize: your projects will not "stop working" because of oxidation after a 
-few&nbsp;months and its safe to wash.</h3>
-<h3>In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 
-tips</a>&nbsp;you get to know what it&acute;s made of, how it works, what is good for (and not good too). All you need for 
-your project!</h3>
+<td style="width: 531.648px;">
+<p style="text-align: justify; font-size: 16px;">A little thicker than every day thread, but still thin enough to&nbsp;be sewn in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</p>
+<table style="height: 16px;" width="481">
+<tbody>
+<tr>
+<td style="width: 473.516px;">
+<h3 style="text-align: center; border: 1px solid black;">It is ideal for any&nbsp;wearable/e-textile project. It is made of stainless steel fibers, thus your projects will not "stop working" because of oxidation after a few&nbsp;months and its safe to wash.</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="text-align: justify; font-size: 16px;">In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 tips</a>&nbsp;you get inspiration for your project!</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20thread/Conductive%20thread.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
