--- a/copper tape/copper tape.html
+++ b/copper tape/copper tape.html
@@ -10,7 +10,7 @@
 <h3 style="text-align: center;">Copper tape provide ways to make surfaces conductive.</h3>
 <p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=XKTPqtRwwXA" target="_blank" rel="noopener">Starting with copper tape</a>&nbsp;will inspire you for much more.</p>
 <p style="font-size: 16px;">Tip: you could use aluminium foil&nbsp;paper and glue to get the same effect!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/copper%20tape/Copper%20tape.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/copper%20tape/Copper%20tape.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
