--- a/gas sensor/gas sensor.html
+++ b/gas sensor/gas sensor.html
@@ -18,7 +18,7 @@
 </table>
 <p style="font-size: 16px;">For instance, a&nbsp;gas&nbsp;detector can sound an alarm to operators in the area where a gas leak is occurring, giving&nbsp;them the opportunity to leave.</p>
 <p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=BIf_mpnsZvY" target="_blank" rel="noopener">How to use gas sensor with Arduino</a>&nbsp;will support you in your projects!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/gas%20sensor/gas%20sensor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/gas%20sensor/gas%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
