Update input and output devices.html

--- a/imput and output devices/input and output devices.html
+++ b/imput and output devices/input and output devices.html
@@ -21,6 +21,6 @@
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/imput%20and%20output%20devices/Input%20and%20output%20device.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/imput%20and%20output%20devices/Input%20and%20output%20device.pdf">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_CC2.jpg?raw=true" alt="" width="46" height="46" /></p>
