--- a/IR array/IR array.html
+++ b/IR array/IR array.html
@@ -15,7 +15,7 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 15px;">&nbsp;<a href="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR%20ARRAY.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 15px;">&nbsp;<a href="https://github.com/ecraft2learn/OER/raw/master/IR%20array/IR%20ARRAY.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
