--- a/LDR sensor/LDR sensor.html
+++ b/LDR sensor/LDR sensor.html
@@ -1,14 +1,25 @@
-<h1><span style="color: #000000;">Light sensor/Light dependent Resistor (LDR)/photoresistor</span></h1>
-<table style="height: 377px; width: 825px;">
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>LDR sensor</h1>
+<table style="height: 166px; width: 829px;">
 <tbody>
 <tr>
-<td style="width: 10px;">&nbsp;&nbsp;</td>
-<td style="width: 801px;">
-<h3 style="text-align: justify;">A&nbsp;Light Sensor&nbsp;is something that a robot can use to detect the current ambient light level -&nbsp;i.e. how bright/dark it is. There are a range of different types of light sensors, including "Photoresistors".</h3>
-<h3 style="text-align: justify;">A photoresistor or LDR changes its resistance analogue value (0-1023) based on the<br />amount of light that falls upon it. The net effect is an improvement in its&nbsp;conductivity with a decrease in resistance for an increase in&nbsp;illumination. Also, photoresistive cells have a long response time&nbsp;requiring many seconds to respond to a change in the light intensity.&nbsp;</h3>
-<p>&nbsp;<img src="http://gdurl.com/CK7U " alt="" width="335" height="181" />&nbsp; &nbsp; &nbsp;<img src="http://gdurl.com/ElNa " alt="" width="374" height="231" /></p>
-<p>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+<td style="width: 244.766px; text-align: center;"><img src="https://github.com/ecraft2learn/OER/blob/master/LDR%20sensor/LDR%20sensor.jpg?raw=true" alt="" width="252" height="252" />&nbsp;</td>
+<td style="font-size: 16px; width: 572.266px; text-align: justify;">
+<p style="text-align: justify;">A light sensor&nbsp;is something that a robot can use to detect the current ambient light level - i.e. how bright/dark it is. There are a range of different types of light sensors, including 'Photoresistors'.</p>
+<table style="height: 77px;" width="501">
+<tbody>
+<tr>
+<td style="width: 493.516px; text-align: center; border: 1px solid black;">
+<h3>A photoresistor or LDR (light dependent resistor) sensor changes its resistance analogue value (0-1023) based on the amount of light that falls upon it. The net effect is an improvement in its conductivity with a decrease in resistance for an increase in illumination.</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p>In this <a href="https://www.youtube.com/watch?v=jqHOPSL2MMU">video</a> you can learn how to make LDR darkness sensor circuit.&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/LDR%20sensor/Light%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="142" height="50" /></a></p>
